remove Desugar annotation from Jabel, some cleanup