@@ -1,6 +1,5 @@
 package dev.latvian.kubejs.block.predicate;
 
-import com.github.bsideup.jabel.Desugar;
 import dev.latvian.kubejs.registry.RegistryInfos;
 import dev.latvian.kubejs.util.ListJS;
 import dev.latvian.kubejs.util.MapJS;
@@ -93,7 +92,7 @@ public interface BlockStatePredicate {
 				}
 			}
 
-			return predicates.isEmpty() ? Simple.NONE : predicates.size() == 1 ? predicates.get(0) : new OrMatch(predicates);
+			return predicates.isEmpty() ? Simple.NONE : predicates.size() == 1 ? predicates.getFirst() : new OrMatch(predicates);
 		}
 
 		val map = MapJS.of(o);
@@ -210,7 +209,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	record BlockMatch(Block block) implements BlockStatePredicate {
 		@Override
 		public boolean check(BlockState state) {
@@ -244,7 +242,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	record StateMatch(BlockState state) implements BlockStatePredicate {
 		@Override
 		public boolean check(BlockState s) {
@@ -278,7 +275,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	record TagMatch(Tag<Block> tag) implements BlockStatePredicate {
 		@Override
 		public boolean check(BlockState state) {
@@ -301,7 +297,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	final class RegexMatch implements BlockStatePredicate {
 		public final Pattern pattern;
 		private final LinkedHashSet<Block> matchedBlocks;
@@ -343,7 +338,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	record OrMatch(List<BlockStatePredicate> list) implements BlockStatePredicate {
 		@Override
 		public boolean check(BlockState state) {
@@ -410,7 +404,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	final class NotMatch implements BlockStatePredicate {
 		private final BlockStatePredicate predicate;
 		private final Collection<BlockState> cachedStates;
@@ -470,7 +463,6 @@ public interface BlockStatePredicate {
 		}
 	}
 
-    @Desugar
 	final class AndMatch implements BlockStatePredicate {
 		private final List<BlockStatePredicate> list;
 		private final Collection<BlockState> cachedStates;
